# Project_c_simulation_java

.github/workflows/: ATaktik.c  ATaktik.h  AUretim.h  BTaktik.h  BUretim.h  CMakeLists.txt  Koloni.c  Koloni.h  Oyun.h  Taktik.c  Taktik.h  Test.c  Uretim.c  Uretim.h
