cmake_minimum_required(VERSION 3.23)
project(untitled2 C)

set(CMAKE_C_STANDARD 23)

add_executable(untitled2 NumberUtil.h NumberUtil.c Test.c Taktik.c Taktik.h Koloni.h appMain.c Koloni.c Uretim.h Uretim.c Oyun.c Oyun.c Oyun.h AUretim.h AUretim.c BUretim.h BUretim.c ATaktik.h BTaktik.c ATaktik.c BTaktik.h)
